# cyborg-fu

./: Assassin.py  Blade.py  Block.py  Blood.py  Club.py  Creature.py  DisplayObject.py  Gun.py  Hero.py  Ogre.py  PowerShot.py  README  README.md  Runt.py  Shadow.py  Shot.py  StageOne.py  StageThree.py  StageTwo.py  Tesi.py  ThrownBlade.py  assassin.py  bonus.py  creatures.py  main.py  mainmenu.py  ogre.py  pyproject.toml  runt.py  sprites.py  weapons.py
cyborg_fu/: __init__.py  __main__.py  assets.py  constants.py  enums.py
cyborg_fu/creatures/: __init__.py  assassin.py  base.py  hero.py  ogre.py  runt.py  shadow.py  tesi.py
cyborg_fu/effects/: __init__.py  blood.py
cyborg_fu/stages/: __init__.py  base.py  stage_one.py  stage_three.py  stage_two.py
cyborg_fu/ui/: __init__.py  hud.py  menu.py  text.py
cyborg_fu/weapons/: __init__.py  blade.py  block.py  club.py  gun.py  power_shot.py  shot.py  thrown_blade.py
docs/superpowers/plans/: 2026-04-06-python3-modernization.md
tests/: conftest.py  test_assets.py  test_enums.py
tests/test_creatures/: test_assassin.py  test_base.py  test_hero.py  test_ogre.py  test_runt.py  test_shadow.py  test_tesi.py
tests/test_effects/: test_blood.py
tests/test_stages/: test_stage_one.py  test_stage_three.py  test_stage_two.py
tests/test_ui/: test_hud.py  test_text.py
tests/test_weapons/: test_blade.py  test_block.py  test_club.py  test_shot.py
